--- a/Cross_Products/Cross_Products.html
+++ b/Cross_Products/Cross_Products.html
@@ -1942,7 +1942,7 @@ c-16-25.333-24-45-24-59z"></path>
         <div class="block-info" style="display: none;"><span class="line-numbers">193</span></div>
       </div>
       <div class="block">
-        <div class="inline-html active" lo="195" lf="220">
+        <div class="inline-html" lo="195" lf="220">
           <div class="solutionstrue" style="display: none;">
             <div class="block">
               <p padlength="0"><strong type="md">a.</strong></p>
@@ -2057,7 +2057,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="222" lf="222" class=""><a name="determinant-method" number="5" lo="222" raw="# Determinant Method" class="anchor hanchor" href="#determinant-method"><span class="hnumber">5</span>&nbsp;<span class="htext">Determinant Method</span></a></h1>
+        <h1 lo="222" lf="222" class="active"><a name="determinant-method" number="5" lo="222" raw="# Determinant Method" class="anchor hanchor" href="#determinant-method"><span class="hnumber">5</span>&nbsp;<span class="htext">Determinant Method</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">222</span></div>
       </div>
       <div class="block">
