--- a/Magnetic_Force/Magnetic_Force.html
+++ b/Magnetic_Force/Magnetic_Force.html
@@ -556,7 +556,7 @@
   <div id="toc" style="min-width: 5em;">
     <ol>
       <li>
-        <a href="#introduction" raw="# Introduction" lo="5" class="">
+        <a href="#introduction" raw="# Introduction" lo="5">
           <span class="toctext">Introduction</span>
         </a>
       </li>
@@ -566,7 +566,7 @@
         </a>
         <ol class="toc" style="display: none;">
           <li>
-            <a href="#computing-bfvec-f-and-f-using-vector-notation" raw="## Computing $\bfvec{F}$ and $F$ Using Vector Notation" lo="38" class="">
+            <a href="#computing-bfvec-f-and-f-using-vector-notation" raw="## Computing $\bfvec{F}$ and $F$ Using Vector Notation" lo="38">
               <span class="toctext">Computing <span len="11" raw="_\bfvec{F}_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.9691em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">F</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
                                       <path d="M377 20c0-5.333 1.833-10 5.5-14S391 0 397 0c4.667 0 8.667 1.667 12 5
 3.333 2.667 6.667 9 10 19 6.667 24.667 20.333 43.667 41 57 7.333 4.667 11
@@ -579,12 +579,12 @@ c-16-25.333-24-45-24-59z"></path>
             </a>
           </li>
           <li>
-            <a href="#example" raw="## Example" lo="70" class="">
+            <a href="#example" raw="## Example" lo="70" class="highlighted">
               <span class="toctext">Example</span>
             </a>
           </li>
           <li>
-            <a href="#problem" raw="## Problem" lo="93" class="highlighted">
+            <a href="#problem" raw="## Problem" lo="93">
               <span class="toctext">Problem</span>
             </a>
           </li>
@@ -618,7 +618,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="5" lf="5" class=""><a name="introduction" number="1" lo="5" raw="# Introduction" class="anchor hanchor" href="#introduction"><span class="hnumber">1</span>&nbsp;<span class="htext">Introduction</span></a></h1>
+        <h1 lo="5" lf="5"><a name="introduction" number="1" lo="5" raw="# Introduction" class="anchor hanchor" href="#introduction"><span class="hnumber">1</span>&nbsp;<span class="htext">Introduction</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">5</span></div>
       </div>
       <div class="block">
@@ -646,7 +646,7 @@ c-16-25.333-24-45-24-59z"></path>
         <div class="block-info" style="display: none;"><span class="line-numbers">9</span></div>
       </div>
       <div class="block">
-        <p padlength="0" lo="11" lf="11" class="">A moving charge creates a magnetic field. A moving charge <span len="3" raw="_q_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.625em;vertical-align:-0.1944em;"></span><span class="mord mathnormal" style="margin-right:0.03588em;">q</span></span></span></span> in a magnetic field (created by other moving charges) experiences a force of</p>
+        <p padlength="0" lo="11" lf="11">A moving charge creates a magnetic field. A moving charge <span len="3" raw="_q_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.625em;vertical-align:-0.1944em;"></span><span class="mord mathnormal" style="margin-right:0.03588em;">q</span></span></span></span> in a magnetic field (created by other moving charges) experiences a force of</p>
         <div class="block-info" style="display: none;"><span class="line-numbers">11</span></div>
       </div>
       <div class="block">
@@ -890,7 +890,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="38" lf="38" class=""><a name="computing-bfvec-f-and-f-using-vector-notation" number="2.1" lo="38" raw="## Computing $\bfvec{F}$ and $F$ Using Vector Notation" class="anchor hanchor" href="#computing-bfvec-f-and-f-using-vector-notation"><span class="hnumber">2.1</span>&nbsp;<span class="htext">Computing <span len="11" raw="_\bfvec{F}_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.9691em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">F</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
+        <h2 lo="38" lf="38"><a name="computing-bfvec-f-and-f-using-vector-notation" number="2.1" lo="38" raw="## Computing $\bfvec{F}$ and $F$ Using Vector Notation" class="anchor hanchor" href="#computing-bfvec-f-and-f-using-vector-notation"><span class="hnumber">2.1</span>&nbsp;<span class="htext">Computing <span len="11" raw="_\bfvec{F}_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.9691em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">F</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
                                     <path d="M377 20c0-5.333 1.833-10 5.5-14S391 0 397 0c4.667 0 8.667 1.667 12 5
 3.333 2.667 6.667 9 10 19 6.667 24.667 20.333 43.667 41 57 7.333 4.667 11
 10.667 11 18 0 6-1 10-3 12s-6.667 5-14 9c-28.667 14.667-53.667 35.667-75 63
@@ -902,7 +902,7 @@ c-16-25.333-24-45-24-59z"></path>
         <div class="block-info" style="display: none;"><span class="line-numbers">38</span></div>
       </div>
       <div class="block">
-        <p padlength="0" lo="40" lf="40" class="">The calculation of the cross product when both vectors in the cross product are along one of the Cartesian coordinate axes is the easiest case (e.g., <span len="20" raw="_\bfvec{v}=v_o\jhat_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7274em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7274em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf" style="margin-right:0.01597em;">v</span></span><span style="top:-3.0134em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.2077em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
+        <p padlength="0" lo="40" lf="40">The calculation of the cross product when both vectors in the cross product are along one of the Cartesian coordinate axes is the easiest case (e.g., <span len="20" raw="_\bfvec{v}=v_o\jhat_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7274em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7274em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf" style="margin-right:0.01597em;">v</span></span><span style="top:-3.0134em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.2077em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
                                 <path d="M377 20c0-5.333 1.833-10 5.5-14S391 0 397 0c4.667 0 8.667 1.667 12 5
 3.333 2.667 6.667 9 10 19 6.667 24.667 20.333 43.667 41 57 7.333 4.667 11
 10.667 11 18 0 6-1 10-3 12s-6.667 5-14 9c-28.667 14.667-53.667 35.667-75 63
@@ -1026,7 +1026,7 @@ __" class="katex-display fleqn"><span class="katex"><span class="katex-html" ari
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="70" lf="70" class=""><a name="example" number="2.2" lo="70" raw="## Example" class="anchor hanchor" href="#example"><span class="hnumber">2.2</span>&nbsp;<span class="htext">Example</span></a></h2>
+        <h2 lo="70" lf="70" class="highlighted"><a name="example" number="2.2" lo="70" raw="## Example" class="anchor hanchor" href="#example"><span class="hnumber">2.2</span>&nbsp;<span class="htext">Example</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">70</span></div>
       </div>
       <div class="block">
@@ -1045,9 +1045,9 @@ __" class="katex-display fleqn"><span class="katex"><span class="katex-html" ari
       </div>
       <div class="block">
         <ol lo="78" lf="79" class="compact">
-          <li markerlength="3" padlength="0" lo="78" lf="78">
+          <li markerlength="3" padlength="0" lo="78" lf="78" class="">
             <div class="block">
-              <p padlength="0" lo="78" lf="78">Assuming <span len="17" raw="_|\bfvec{B}|=B_o_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1.2191em;vertical-align:-0.25em;"></span><span class="mord">∣</span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">B</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
+              <p padlength="0" lo="78" lf="78" class="active">Assuming <span len="17" raw="_|\bfvec{B}|=B_o_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1.2191em;vertical-align:-0.25em;"></span><span class="mord">∣</span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">B</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
                                       <path d="M377 20c0-5.333 1.833-10 5.5-14S391 0 397 0c4.667 0 8.667 1.667 12 5
 3.333 2.667 6.667 9 10 19 6.667 24.667 20.333 43.667 41 57 7.333 4.667 11
 10.667 11 18 0 6-1 10-3 12s-6.667 5-14 9c-28.667 14.667-53.667 35.667-75 63
@@ -1079,7 +1079,7 @@ c-16-25.333-24-45-24-59z"></path>
 -7 1c-4.667 0-9.167-1.833-13.5-5.5S337 184 337 178c0-12.667 15.667-32.333 47-59
 H213l-171-1c-8.667-6-13-12.333-13-19 0-4.667 4.333-11.333 13-20h359
 c-16-25.333-24-45-24-59z"></path>
-                                    </svg></span></span></span></span></span></span></span></span></span></span> in terms of their magnitudes and unit vectors. Then find the magnetic force using <span len="39" raw="_\bfvec{F} = q\bfvec{v}\times\bfvec{B}_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.9691em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">F</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
+                                    </svg></span></span></span></span></span></span></span></span></span></span> in terms of their magnitudes and unit vectors. Then use these expressions to find the magnetic force using <span len="39" raw="_\bfvec{F} = q\bfvec{v}\times\bfvec{B}_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.9691em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">F</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
                                       <path d="M377 20c0-5.333 1.833-10 5.5-14S391 0 397 0c4.667 0 8.667 1.667 12 5
 3.333 2.667 6.667 9 10 19 6.667 24.667 20.333 43.667 41 57 7.333 4.667 11
 10.667 11 18 0 6-1 10-3 12s-6.667 5-14 9c-28.667 14.667-53.667 35.667-75 63
@@ -1115,9 +1115,9 @@ c-16-25.333-24-45-24-59z"></path>
               <div class="block-info" style="display: none;"><span class="line-numbers">78</span></div>
             </div>
           </li>
-          <li markerlength="3" padlength="0" lo="79" lf="81">
+          <li markerlength="3" padlength="0" lo="79" lf="79" class="">
             <div class="block">
-              <p padlength="0" lo="79" lf="79">Use <span len="19" raw="_F = |q|vB\sin\phi_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal" style="margin-right:0.13889em;">F</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord">∣</span><span class="mord mathnormal" style="margin-right:0.03588em;">q</span><span class="mord">∣</span><span class="mord mathnormal" style="margin-right:0.03588em;">v</span><span class="mord mathnormal" style="margin-right:0.05017em;">B</span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mop">sin</span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord mathnormal">ϕ</span></span></span></span> to compute the magnitude of the force and use the right-hand rule to determine its direction.</p>
+              <p padlength="0" lo="79" lf="79" class="">Use <span len="19" raw="_F = |q|vB\sin\phi_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal" style="margin-right:0.13889em;">F</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord">∣</span><span class="mord mathnormal" style="margin-right:0.03588em;">q</span><span class="mord">∣</span><span class="mord mathnormal" style="margin-right:0.03588em;">v</span><span class="mord mathnormal" style="margin-right:0.05017em;">B</span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mop">sin</span><span class="mspace" style="margin-right:0.1667em;"></span><span class="mord mathnormal">ϕ</span></span></span></span> to compute the magnitude of the force and use the right-hand rule to determine its direction.</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">79</span></div>
             </div>
           </li>
@@ -1183,7 +1183,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="93" lf="93" class="highlighted"><a name="problem" number="2.3" lo="93" raw="## Problem" class="anchor hanchor" href="#problem"><span class="hnumber">2.3</span>&nbsp;<span class="htext">Problem</span></a></h2>
+        <h2 lo="93" lf="93"><a name="problem" number="2.3" lo="93" raw="## Problem" class="anchor hanchor" href="#problem"><span class="hnumber">2.3</span>&nbsp;<span class="htext">Problem</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">93</span></div>
       </div>
       <div class="block">
@@ -1274,7 +1274,7 @@ c-16-25.333-24-45-24-59z"></path>
         <div class="block-info" style="display: none;"><span class="line-numbers">110-112</span></div>
       </div>
       <div class="block">
-        <div class="inline-html active" lo="114" lf="118">
+        <div class="inline-html" lo="114" lf="118">
           <div class="solutionstrue" style="display: none;"></div>
           <div class="solutionsfalse" style="display: block;">
             <div class="block">
