--- a/Magnetic_Force_on_Wires/Magnetic_Force_on_Wires.html
+++ b/Magnetic_Force_on_Wires/Magnetic_Force_on_Wires.html
@@ -556,7 +556,7 @@
   <div id="toc" style="min-width: 5em;">
     <ol>
       <li>
-        <a href="#forces-on-straight-wires" raw="# Forces on Straight Wires" lo="5" class="highlighted">
+        <a href="#forces-on-straight-wires" raw="# Forces on Straight Wires" lo="5">
           <span class="toctext">Forces on Straight Wires</span>
         </a>
         <ol class="toc" style="display: none;">
@@ -566,7 +566,7 @@
             </a>
           </li>
           <li>
-            <a href="#problem" raw="## Problem " lo="55">
+            <a href="#problem" raw="## Problem " lo="55" class="highlighted">
               <span class="toctext">Problem</span>
             </a>
           </li>
@@ -616,7 +616,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="5" lf="5" class="highlighted"><a name="forces-on-straight-wires" number="1" lo="5" raw="# Forces on Straight Wires" class="anchor hanchor" href="#forces-on-straight-wires"><span class="hnumber">1</span>&nbsp;<span class="htext">Forces on Straight Wires</span></a></h1>
+        <h1 lo="5" lf="5"><a name="forces-on-straight-wires" number="1" lo="5" raw="# Forces on Straight Wires" class="anchor hanchor" href="#forces-on-straight-wires"><span class="hnumber">1</span>&nbsp;<span class="htext">Forces on Straight Wires</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">5</span></div>
       </div>
       <div class="block">
@@ -636,7 +636,7 @@ c-16-25.333-24-45-24-59z"></path>
         <div class="block-info" style="display: none;"><span class="line-numbers">9</span></div>
       </div>
       <div class="block">
-        <p padlength="0" lo="11" lf="11" class="active"><span len="41" raw="__\bfvec{F} = q\bfvec{v}\times\bfvec{B}__" class="katex-display fleqn"><span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.9691em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">F</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
+        <p padlength="0" lo="11" lf="11"><span len="41" raw="__\bfvec{F} = q\bfvec{v}\times\bfvec{B}__" class="katex-display fleqn"><span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.9691em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">F</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
                                   <path d="M377 20c0-5.333 1.833-10 5.5-14S391 0 397 0c4.667 0 8.667 1.667 12 5
 3.333 2.667 6.667 9 10 19 6.667 24.667 20.333 43.667 41 57 7.333 4.667 11
 10.667 11 18 0 6-1 10-3 12s-6.667 5-14 9c-28.667 14.667-53.667 35.667-75 63
@@ -989,7 +989,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="55" lf="55"><a name="problem" number="1.2" lo="55" raw="## Problem " class="anchor hanchor" href="#problem"><span class="hnumber">1.2</span>&nbsp;<span class="htext">Problem</span></a></h2>
+        <h2 lo="55" lf="55" class="highlighted"><a name="problem" number="1.2" lo="55" raw="## Problem " class="anchor hanchor" href="#problem"><span class="hnumber">1.2</span>&nbsp;<span class="htext">Problem</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">55</span></div>
       </div>
       <div class="block">
@@ -1015,11 +1015,11 @@ c-16-25.333-24-45-24-59z"></path>
         <ol lo="63" lf="77" class="loose">
           <li markerlength="3" padlength="0" lo="63" lf="70">
             <div class="block">
-              <p padlength="0" lo="63" lf="64">For the current loops in a. and b. in the figure above, determine the magnitude and direction of the force on each segment of the wire and the net force on the loop given that a magnetic field of magnitude <span len="5" raw="_B_o_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.8333em;vertical-align:-0.15em;"></span><span class="mord"><span class="mord mathnormal" style="margin-right:0.05017em;">B</span><span class="msupsub"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.1514em;"><span style="top:-2.55em;margin-left:-0.0502em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight">o</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.15em;"><span></span></span></span></span></span></span></span></span></span> points out of the page. Draw the force vector on the line segments and show your calculation on the figure or in the space below.</p>
+              <p padlength="0" lo="63" lf="64" class="">For the current loops in a. and b. in the figure above, determine the magnitude and direction of the force on each segment of the wire and the net force on the loop given that a magnetic field of magnitude <span len="5" raw="_B_o_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.8333em;vertical-align:-0.15em;"></span><span class="mord"><span class="mord mathnormal" style="margin-right:0.05017em;">B</span><span class="msupsub"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.1514em;"><span style="top:-2.55em;margin-left:-0.0502em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight">o</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.15em;"><span></span></span></span></span></span></span></span></span></span> points out of the page. Draw the force vector on the line segments and show your calculation on the figure or in the space below.</p>
               <div class="block-info" style="display: none;"><span class="line-numbers">63-64</span></div>
             </div>
             <div class="block">
-              <div class="inline-html" lo="65" lf="68">
+              <div class="inline-html active" lo="65" lf="68">
                 <div class="solutionstrue" style="display: none;">
                   <div class="block">
                     <p padlength="0">The force on each segment is shown on the diagram above. The net force is zero for both cases.</p>
