--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
   <div id="toc" style="min-width: 5em;">
     <ol>
       <li>
-        <a href="#overview" raw="# Overview" lo="1">
+        <a href="#overview" raw="# Overview" lo="1" class="highlighted">
           <span class="toctext">Overview</span>
         </a>
       </li>
@@ -707,7 +707,7 @@ c-16-25.333-24-45-24-59z"></path>
             </a>
           </li>
           <li>
-            <a href="#magnetic-field-of-a-moving-charge" raw="## Magnetic Field of a Moving Charge" lo="416" class="highlighted">
+            <a href="#magnetic-field-of-a-moving-charge" raw="## Magnetic Field of a Moving Charge" lo="416" class="">
               <span class="toctext">Magnetic Field of a Moving Charge</span>
             </a>
           </li>
@@ -730,7 +730,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="1" lf="1"><a name="overview" number="1" lo="1" raw="# Overview" class="anchor hanchor" href="#overview"><span class="hnumber">1</span>&nbsp;<span class="htext">Overview</span></a></h1>
+        <h1 lo="1" lf="1" class="highlighted"><a name="overview" number="1" lo="1" raw="# Overview" class="anchor hanchor" href="#overview"><span class="hnumber">1</span>&nbsp;<span class="htext">Overview</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">1</span></div>
       </div>
       <div class="block">
@@ -742,7 +742,7 @@ c-16-25.333-24-45-24-59z"></path>
         <div class="block-info" style="display: none;"><span class="line-numbers">5</span></div>
       </div>
       <div class="block">
-        <p padlength="0" lo="7" lf="7">These activities were written in collaboration with Jessica Rosenberg over four semesters. The tutorials were revised from semester to semester based on observations made while using them. Robb Oerter, Gunnar Schwertfeger, Patrick Vora, and Michael Reefe have contributed edits, video solutions, or links to resources.</p>
+        <p padlength="0" lo="7" lf="7" class="">These activities were written in collaboration with Jessica Rosenberg over four semesters. The tutorials were revised from semester to semester based on observations made while using them. Robb Oerter, Gunnar Schwertfeger, Patrick Vora, Joe Weingartner, and Michael Reefe have contributed edits, video solutions, or links to resources.</p>
         <div class="block-info" style="display: none;"><span class="line-numbers">7</span></div>
       </div>
       <div class="block">
@@ -750,7 +750,7 @@ c-16-25.333-24-45-24-59z"></path>
         <div class="block-info" style="display: none;"><span class="line-numbers">9</span></div>
       </div>
       <div class="block">
-        <p padlength="0" lo="11" lf="11">The problems on these activities are generally basic and straightforward. The problems chosen and their difficulty are based on observations when helping students solve activity and homework problems. (Initial drafts of these activities were medium-difficulty homework-level problems and were revised when we understood which mathematical concepts they needed to master in order to understand how to approach the homework problems.</p>
+        <p padlength="0" lo="11" lf="11" class="active">The problems on these activities are generally basic and straightforward. The problems chosen and their difficulty are based on observations when helping students solve activity and homework problems. (Initial drafts of these activities were medium-difficulty homework-level problems and were revised when we understood which mathematical concepts they needed to master in order to understand how to approach the homework problems.)</p>
         <div class="block-info" style="display: none;"><span class="line-numbers">11</span></div>
       </div>
       <div class="block">
@@ -2000,7 +2000,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="416" lf="416" class="highlighted"><a name="magnetic-field-of-a-moving-charge" number="4.24" lo="416" raw="## Magnetic Field of a Moving Charge" class="anchor hanchor" href="#magnetic-field-of-a-moving-charge"><span class="hnumber">4.24</span>&nbsp;<span class="htext">Magnetic Field of a Moving Charge</span></a></h2>
+        <h2 lo="416" lf="416" class=""><a name="magnetic-field-of-a-moving-charge" number="4.24" lo="416" raw="## Magnetic Field of a Moving Charge" class="anchor hanchor" href="#magnetic-field-of-a-moving-charge"><span class="hnumber">4.24</span>&nbsp;<span class="htext">Magnetic Field of a Moving Charge</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">416</span></div>
       </div>
       <div class="block">
@@ -2024,7 +2024,7 @@ c-16-25.333-24-45-24-59z"></path>
           </li>
           <li markerlength="2" padlength="0" lo="424" lf="428" class="">
             <div class="block">
-              <p padlength="0" lo="424" lf="428" class="active">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Magnetic_Flux">Github</a> | <a href="Magnetic_Flux/Magnetic_Flux.md">Markdown</a> | </p>
+              <p padlength="0" lo="424" lf="428" class="">Source: | <a href="https://www.overleaf.com/read/btssfxsjgyzr">Overleaf</a> | <a href="https://github.com/rweigel/phys260/tree/master/Magnetic_Flux">Github</a> | <a href="Magnetic_Flux/Magnetic_Flux.md">Markdown</a> | </p>
               <div class="block-info" style="display: none;"><span class="line-numbers">424-428</span></div>
             </div>
           </li>
